# Tomasulo-Simulator

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  predictor_comparison.json  trace.json
examples/: cdb_test.asm  fibonacci.asm  fibonacci_loop.asm  full_system_demo.asm  load_rs.asm  reg_producer.asm  simple.asm  structural.asm
include/: BranchPredictor.h  CDB.h  DebugPrinter.h  Flush.h  FunctionalUnit.h  Instruction.h  InstructionStatus.h  LSQ.h  Memory.h  Parser.h  ROB.h  RegisterFile.h  ReservationStation.h  Simulator.h  Trace.h
server/: app.py
src/: BranchPredictor.cpp  CDB.cpp  DebugPrinter.cpp  Flush.cpp  FunctionalUnit.cpp  LSQ.cpp  Memory.cpp  Parser.cpp  ROB.cpp  RegisterFile.cpp  ReservationStation.cpp  Simulator.cpp  Trace.cpp  main.cpp
tests/: add_immediate.asm  backward_branch.asm  backword_branch.asm  basic_arithmetic.asm  branch_flush_commit_count.asm  branch_not_taken.asm  branch_not_taken_commit_count.asm  cdb_contention.asm  circular_rob_dependency.asm  circular_rob_wrap.asm  create_test.py  create_tests.py  forward_branch.asm  gshare_correlated_branch.asm  gshare_optimal  gshare_optimal.asm  load_use_dependency.asm  long_loop.asm  lsq_memory_order.asm  memory_order_store_then_load.asm  nested_loop.asm  one_bit_optimal.asm  ooo_writeback.asm  raw_dependency.asm  rob_full.asm  run_tests.py  self_dependency.asm  store_commit.asm  store_load.asm  two_bit_optimal.asm  waw_renaming.asm
tools/: compare_predictors.py
visualizer/: app.js  index.html  style.css
